--- a/AngularMaxima/src/app/pages/produto/produto-deletar/produto-deletar.component.html
+++ b/AngularMaxima/src/app/pages/produto/produto-deletar/produto-deletar.component.html
@@ -38,10 +38,15 @@
       <label for="inutilizavel" class="form-check-label">Inutilizável</label>
     </div>
 
-    <div class="button-group">
-      <a [routerLink]="['/produto/editar', produto?.id]" class="btn btn-primary">Editar</a>
-      <button class="btn btn-primary" routerLink="/produto">Voltar</button>
+    <div class="confirmation">
+      <p>Deseja realmente apagar este produto?</p>
     </div>
+
+    <div class="button-group">
+      <button (click)="apagarProduto()" class="btn btn-cancelar">Apagar</button>
+      <button class="btn btn-secondary" routerLink="/produto" class="btn btn-primary">Voltar</button>
+    </div>
+
   </div>
 </div>
 
